@@ -3,6 +3,10 @@ Revision history for DBIx::Class
     * New Features / Changes
         - Schema/resultsource instances are now crossreferenced via a new
           system guaranteeing leak-free mutually assuered destruction
+        - Switch to a warning when find() is invoked with both a 'key'
+          argument and a NULL-containing condition to satisfy the named
+          constraint. Previously (starting with 0.08124) an exception was
+          thrown.
 
     * Fixes
         - Revert default selection to being lazy again (eagerness introduced
